refactor: 작품 해시태그 Validation 로직 수정